--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "jest": {
-  "setupFilesAfterEnv": ["./tests/setup.js"]
-},
+    "setupFilesAfterEnv": [
+      "./tests/setup.js"
+    ]
+  },
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js --ignore tests",
@@ -18,7 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "2.188.0",
+    "aws-sdk": "^2.188.0",
     "body-parser": "1.17.2",
     "concurrently": "3.5.0",
     "cookie-session": "2.0.0-beta.2",
@@ -33,7 +35,7 @@
     "puppeteer-core": "^24.4.0",
     "redis": "2.8.0",
     "safe-buffer": "^5.2.1",
-    "uuid": "3.2.1"
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
